extract Navbar and SwitchTheme

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,9 @@
 .app.dark {
   --bg-color: #000988;
+  --bg-color-inverted: #e3e1e1;
 
-  --primary-color: #34a834;
+  --primary-color: #076007;
+  --primary-hover-color: #013a08;
+
   --secondary-color: #a0e3a0;
 }
