--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,6 +1,9 @@
 .app.light {
   --bg-color: #e3e1e1;
+  --bg-color-inverted: #161c77;
 
-  --primary-color: #0a3170;
-  --secondary-color: #3587a4;
+  --primary-color: #109425;
+  --primary-hover-color: #005408;
+
+  --secondary-color: #98da8c;
 }
