--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,8 +1,8 @@
 @import "reset";
-@import "fonts/fonts";
-@import "variables/global";
-@import "themes/dark";
-@import "themes/normal";
+@import "shared/assets/fonts/fonts";
+@import "./variables/global";
+@import "./themes/dark";
+@import "./themes/normal";
 
 .app {
   min-height: 100vh;
