add new page Articles

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,10 +1,5 @@
 @use 'sass:color';
 
-$text-color: rgba(246, 246, 246, 0.8);
-
-$bg-color: #2C3F59;
-$bg-color-inverted: #fff4e7;
-
 $primary-color: #d79824;
 $primary-color-hover:  color.adjust($primary-color, $blackness: 40%);
 
@@ -12,10 +7,10 @@ $secondary-color: #BFA584;
 $secondary-color-hover:  color.adjust($secondary-color, $blackness: 40%);
 
 .app.dark {
-  --text-color: #{$text-color};
+  --text-color: rgba(246, 246, 246, 0.8);
 
-  --bg-color: #{$bg-color};
-  --bg-color-inverted: #{$bg-color-inverted};
+  --bg-color: #2C3F59;
+  --bg-color-inverted: #fff4e7;
 
   --primary-color: #{$primary-color};
   --primary-color-hover: #{$primary-color-hover};
