--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,5 +1,5 @@
 @import "reset";
-@import "shared/assets/fonts/fonts";
+@import "shared/assets/fonts/fonts.scss";
 @import "./variables/global";
 @import "./themes/dark";
 @import "./themes/normal";
