--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,10 +1,5 @@
 @use 'sass:color';
 
-$text-color: rgba(0, 0, 0, 0.71);
-
-$bg-color: #fff4e7;
-$bg-color-inverted: #2C3F59;
-
 $primary-color: #d79824;
 $primary-color-hover:  color.adjust($primary-color, $blackness: 30%);
 
@@ -12,10 +7,10 @@ $secondary-color: #BFA584;
 $secondary-color-hover:  color.adjust($secondary-color, $blackness: 10%);
 
 .app.light {
-    --text-color: #{$text-color};
+    --text-color: rgba(0, 0, 0, 0.71);
 
-    --bg-color: #{$bg-color};
-    --bg-color-inverted: #{$bg-color-inverted};
+    --bg-color: #fff4e7;
+    --bg-color-inverted: #2C3F59;
 
     --primary-color: #{$primary-color};
     --primary-color-hover: #{$primary-color-hover};
