add layout components

--- a/src/widgets/Navbar/ui/style.module.scss
+++ b/src/widgets/Navbar/ui/style.module.scss
@@ -1,7 +1,7 @@
 .Navbar {
   align-items: center;
   display: flex;
-  min-height: 50px;
+  height: var(--header-height);
   font: var(--font-xl);
 
   &__Menu {
