--- a/src/widgets/Navbar/ui/style.module.scss
+++ b/src/widgets/Navbar/ui/style.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   height: var(--header-height);
   font: var(--font-xl);
+  padding: 0 50px;
 
   &__Menu {
     margin-left: auto;
