--- a/src/shared/config/theme/styles/index.scss
+++ b/src/shared/config/theme/styles/index.scss
@@ -1,6 +1,6 @@
 @import "reset";
 @import "shared/assets/fonts/fonts";
-@import "./variables/global";
+@import "variables/global";
 
 .app {
   background-color: var(--bg-color);
