fix apply theme to body selector

--- a/src/shared/config/theme/styles/index.scss
+++ b/src/shared/config/theme/styles/index.scss
@@ -2,7 +2,7 @@
 @import "shared/assets/fonts/fonts";
 @import "variables/global";
 
-.app {
+body {
   background-color: var(--bg-color);
   color: var(--text-color);
   font: var(--font-m);
