--- a/src/shared/config/theme/ui/themes/normal.scss
+++ b/src/shared/config/theme/ui/themes/normal.scss
@@ -5,7 +5,7 @@ $primary-color-hover: color.adjust($primary-color, $blackness: 30%);
 $secondary-color: #BFA584;
 $secondary-color-hover: color.adjust($secondary-color, $blackness: 10%);
 
-.app.light {
+.app_theme_light {
     --text-color: rgb(0 0 0 / 71%);
     --bg-color: #fff;
     --bg-color-inverted: #2C3F59;
