--- a/src/shared/ui/Modal/style.module.scss
+++ b/src/shared/ui/Modal/style.module.scss
@@ -1,14 +1,18 @@
 @use "sass:color";
 
 .Modal {
-  display: none;
+  height: 100%;
   left: 0;
+  opacity: 0;
   position: fixed;
   top: 0;
+  transition: opacity ease-in-out .4s;
+  width: 100%;
+  z-index: -1;
 
   &_open {
-    display: block;
-    transform: scale(1);
+    opacity: 1;
+    z-index: 10;
   }
 }
 
@@ -19,14 +23,20 @@
   width: 100%;
 }
 
-.Modal__Wrapper {
+.Modal__Container {
   background-color: var(--bg-color);
   border-radius: 25px;
   margin: auto;
   max-width: 60%;
   min-width: 300px;
   padding: 25px;
+  transform: scale(0.2);
+  transition: transform ease-in-out .2s;
   width: 100%;
+}
+
+.Modal_open .Modal__Container {
+  transform: scale(1);
 }
 
 .Modal__Header {
