make LoginfForm to another chunk for bundle size

--- a/src/features/AuthByLogin/ui/LoginForm/styles.module.scss
+++ b/src/features/AuthByLogin/ui/LoginForm/styles.module.scss
@@ -2,6 +2,10 @@
   margin-top: 15px;
   padding: 25px;
 
+  &__Title {
+    text-align: center;
+  }
+
   &__InputContainer {
     margin-bottom: 15px;
   }
