--- a/src/pages/ArticleDetailPage/ui/styles.module.scss
+++ b/src/pages/ArticleDetailPage/ui/styles.module.scss
@@ -7,9 +7,10 @@
   width: 100%;
 }
 
+.ArticleDetailPage__CommentsTitle {
+  margin-bottom: 25px;
+}
+
 .ArticleDetailPage__Comments {
   margin-top:  25px;
 }
-
-
-
