--- a/src/shared/config/theme/ui/themes/normal.scss
+++ b/src/shared/config/theme/ui/themes/normal.scss
@@ -6,7 +6,7 @@ $secondary-color: #BFA584;
 $secondary-color-hover: color.adjust($secondary-color, $blackness: 10%);
 
 .app_theme_light {
-    --text-color: rgb(0 0 0 / 71%);
+    --text-color: #282828;
     --bg-color: #fff;
     --bg-color-inverted: #2C3F59;
     --primary-color: #{$primary-color};
@@ -14,4 +14,13 @@ $secondary-color-hover: color.adjust($secondary-color, $blackness: 10%);
     --secondary-color: #{$secondary-color};
     --secondary-color-hover: #{$secondary-color-hover};
     --card-bg-color: #ebebeb;
+
+    // article card
+    --article-card-bg: #fff;
+
+    // design system colors
+    --black: #282828;
+    --gray-strong: #BDBDBD;
+    --orange: #D74D00;
+    --gray: #EFEFEF;
 }
