--- a/src/entities/Article/ui/ArticleList/styles.module.scss
+++ b/src/entities/Article/ui/ArticleList/styles.module.scss
@@ -1,7 +1,15 @@
 $max-width-list-container: 1164px;
 
 .ArticleList {
-  margin: 0 auto;
   max-width: $max-width-list-container;
   width: 100%;
+}
+
+.ArticleList__Link {
+  color: inherit;
+  text-decoration: none;
+
+  & > * {
+    height: 100%;
+  }
 }
